[FIX] point_of_sale: ensure search field visible in mobile view
The search field dropdown was being rendered behind the orders
list in mobile view, making it unusable. This commit adds a
higher z-index to the search field dropdown to ensure it's
rendered above the orders list.

opw-4654710

X-original-commit: de4634f54f7414f0d732ca3ac0f35fe138fbf674

--- a/addons/point_of_sale/static/src/app/screens/ticket_screen/ticket_screen.scss
+++ b/addons/point_of_sale/static/src/app/screens/ticket_screen/ticket_screen.scss
@@ -43,6 +43,7 @@
     }
     .pos .orders {
         position: sticky;
+        z-index: 1;
     }
 
     .controls {
@@ -50,6 +51,9 @@
         grid-template-areas: 
             "buttons pagination"
             "search search";
+    }
+    .search .fields {
+        z-index: 2;
     }
 }
 
